dodani radni sati

--- a/app/src/main/res/layout/activity_card_details.xml
+++ b/app/src/main/res/layout/activity_card_details.xml
@@ -131,6 +131,23 @@
                     android:text="@string/select_due_date"
                     android:textColor="@color/primary_text_color" />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/card_details_members_label_marginTop"
+                    android:text="@string/work_hours"
+                    android:textColor="@color/secondary_text_color"
+                    android:textSize="@dimen/card_details_label_text_size" />
+
+                <TextView
+                    android:id="@+id/tv_select_work_hours"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/card_details_value_marginTop"
+                    android:padding="@dimen/card_details_value_padding"
+                    android:text="@string/select_work_hours"
+                    android:textColor="@color/primary_text_color" />
+
                 <Button
                     android:id="@+id/btn_update_card_details"
                     android:layout_width="match_parent"
