--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,11 @@
             android:title="@string/nav_my_profile" />
 
         <item
+            android:id="@+id/nav_statistics"
+            android:icon="@drawable/ic_nav_statistics"
+            android:title="@string/nav_statistics" />
+
+        <item
             android:id="@+id/nav_sign_out"
             android:icon="@drawable/ic_nav_sign_out"
             android:title="@string/nav_sign_out" />
