--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,9 @@
     <color name="red_600">#EF4444</color>
     <color name="gray_600">#6B7280</color>
 
+    <color name="light_gray">#E5E7EB</color>
+    <color name="dark_gray">#374151</color>
+
     <color name="text_primary">#1F2937</color>
     <color name="text_secondary">#6B7280</color>
     <color name="background_light">#F9FAFB</color>
